# serious-business

./: .gitignore  Cargo.toml  README.md
examples/: document_webhook.json  project_times.csv
src/: build.rs  lib.rs  main.rs  structs.rs
src/baserow/: client.rs  field_types.rs  generated.rs  mod.rs  structs.rs
src/bdwh/: mod.rs  structs.rs
src/coffeecup/: client.rs  mod.rs  structs.rs
src/easybill/: structs.rs
testdata/: field_types1.json  field_types2.json  list_customers_response.json  list_offers1.json
