[package]
name = "stackable-serious-business"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
quote = "1.0"
convert_case = "0.8"
syn = "2.0.101"
prettyplease = "0.2.33"
textwrap = "0.16"