[package]
name = "stackable-serious-business"
version = "0.1.0"
edition = "2021"

[dependencies]
snafu = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
quote = "1.0"
convert_case = "0.8"
syn = "2.0.101"
prettyplease = "0.2.33"
strum = "0.27"
strum_macros = "0.27.1"
baserow-client = { git = "https://github.com/soenkeliebau/baserow-rs.git", branch= "main"}
trino-rust-client = "0.7"
chrono = { version= "0.4.41" , features = ["serde"]}
http = "1.3.1"
oauth2 = {version = "5.0.0", features = [] } 

